kubernetes/mydata/nextcloud/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: mydata
  name: nextcloud-app-policy
specs:
  # allow connection from ingress-nginx
  - endpointSelector: &self
      matchLabels:
        app.kubernetes.io/name: nextcloud
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: ingress-nginx
              app.kubernetes.io/name: ingress-nginx
        toPorts:
          - ports:
              - protocol: TCP
                port: "8080"
  # allow connection from cilium ingress
  - endpointSelector: *self
    ingress:
      - fromEndpoints:
          - matchExpressions:
              - key: reserved:ingress
                operator: Exists
        toPorts:
          - ports:
              - protocol: TCP
                port: "8080"
  # allow nextcloud to postgres and redis
  - endpointSelector: *self
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - protocol: ANY
                port: "53"
            rules:
              dns:
                - matchName: "nextcloud-postgres-rw.mydata.svc.cluster.local."
                - matchName: "nextcloud-valkey.mydata.svc.cluster.local."
      - toEndpoints:
          - matchLabels:
              cnpg.io/cluster: nextcloud-postgres
          - matchLabels:
              app.kubernetes.io/name: nextcloud-valkey
        toPorts:
          - ports:
              - protocol: TCP
                port: "5432"
              - protocol: TCP
                port: "6379"
